# gdelt-mcp

./: .gitignore  README.md  bigquery_client.py  cameo_lookups.py  pyproject.toml  schema_docs.py  server.py
resources/: __init__.py  cloudvision_schema.py  eventmentions_schema.py  events_schema.py  gkg_schema.py  schemas.py  usage_guide.py
tools/: __init__.py  cameo_tools.py  cost_optimization.py  query_tools.py
utils/: __init__.py  auth.py
