[project]
name = "gdelt-mcp"
version = "0.1.0"
description = "MCP server for GDELT 2.0 database access via BigQuery"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "google-cloud-bigquery>=3.14.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["server.py", "bigquery_client.py", "cameo_lookups.py", "schema_docs.py"]
